# Home-Simulation-Oops-Cpp

./: CMakeLists.txt  README.md  Room.h  SecurityCamera.h  SmartAppliance.h  SmartDevice.h  SmartSpeaker.h  Thermostat.h  UserAuthentication.h
include/: Automation.h  EnergyLog.h  Home.h  Room.h  SmartAppliance.h  SmartLigth.h  SmartLock.h
src/: main.cpp
